testsuite/tests/parser/should_fail/ExportCommaComma.stderr

ExportCommaComma.hs:2:38: error: [GHC-58481]
    parse error on input ‘,’
